--- a/flutter/componentes/pubspec.yaml
+++ b/flutter/componentes/pubspec.yaml
@@ -48,7 +48,7 @@ flutter:
   #para hacer disponibles los recursos estaticos debemos indicarlos en assets, hacemos hot restart(full restart)
   assets:
     - data/menu_opts.json
-  #   - images/a_dot_ham.jpeg
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
